# signal-processing

./: README.md  pyproject.toml
documentation/: implementation.md  specification.md  testing.md
documentation/weekly-reports/: week1.md  week2.md  week3.md  week4.md  week5.md  week6.md  week7.md
src/: app.py  fft.py  signal.py  sounds.py
src/templates/: index.html
src/tests/: fft_test.py
